--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "docz:dev": "docz dev",
-    "docz:build": "docz build"
+    "docz:build": "DOCZ_BASE='/frontend-stories/' docz build"
   },
   "repository": {
     "type": "git",
