doc - modify github page SPA 404 issue.mdx

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "docz:dev": "docz dev",
-    "docz:build": "DOCZ_BASE='/frontend-stories/' docz build"
+    "docz:build": "DOCZ_BASE='/frontend-stories/' docz build",
+    "commit": "node scripts/commit.js"
   },
   "repository": {
     "type": "git",
