script - rename commit as sync and add push command

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "docz:dev": "docz dev",
     "docz:build": "DOCZ_BASE='/frontend-stories/' docz build",
-    "commit": "node scripts/commit.js"
+    "sync": "node scripts/sync.js"
   },
   "repository": {
     "type": "git",
